<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".order.PastryOrderActivity">

        <TextView
            android:id="@+id/tv_pastry_name"
            style="@style/OrderNameTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="ABC"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_header"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/tv_pastry_name" />

        <TextView
            android:id="@+id/tv_heading"
            style="@style/OrderHeadingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/customizations"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_header" />

        <TextView
            android:id="@+id/tv_size"
            style="@style/OrderSubHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_heading" />

        <Spinner
            android:id="@+id/spn_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_size" />

        <TextView
            android:id="@+id/tv_sugar"
            style="@style/OrderSubHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sugar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spn_size" />

        <Spinner
            android:id="@+id/spn_sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sugar" />

        <TextView
            android:id="@+id/tv_quantity"
            style="@style/OrderSubHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/quantity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spn_sugar" />

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circular_bg"
            android:text="@string/remove"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_total_quantity"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity" />

        <TextView
            android:id="@+id/tv_total_quantity"
            style="@style/OrderSubHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/initial_quantity"
            app:layout_constraintBottom_toBottomOf="@id/btn_remove"
            app:layout_constraintLeft_toRightOf="@id/btn_remove"
            app:layout_constraintRight_toLeftOf="@id/btn_add"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity"
            app:layout_constraintTop_toTopOf="@id/btn_remove" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circular_bg"
            android:text="@string/add"
            app:layout_constraintLeft_toRightOf="@id/tv_total_quantity"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity" />

        <TextView
            android:id="@+id/tv_total"
            style="@style/OrderTotalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/total"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_total_amount"
            app:layout_constraintTop_toBottomOf="@id/btn_remove" />

        <TextView
            android:id="@+id/tv_total_amount"
            style="@style/OrderTotalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_total"
            app:layout_constraintLeft_toRightOf="@id/tv_total"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_total" />

        <Button
            android:id="@+id/btn_bite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/take_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
